# xcresult-json

./: .goreleaser.yaml  Cargo.toml  README.md  build.sh
.github/workflows/: ci.yaml  release.yml
fixture/xcresult/1017af07-cba3-4c79-ab87-d4c959bda03b.xcresult/: Info.plist
fixture/xcresult/1017af07-cba3-4c79-ab87-d4c959bda03b.xcresult/Data/: data.0~0SwTPc6f-98mDAZvYe8CQWGFyQaqstWyrPcRZUba2qncpaulaXX0VSDDcZSp291nqwsrqkxikfapGULoLXif9w==  data.0~0xGbDwguplxVFNfSZgrqYIA4R_LMLZWpWxWXWRXXkQH2mRHGJikMyMrFB5VPYtUIggBKqU9v2IYZy90v7DVC2A==  data.0~3d6ZMvyj5amSQlg9L0WwjX_E6FsX_i74TAx2bb0TQfiIibjIFjkWZKskLsOMLgleNEzHK5Y1h2AAgLGw0rI0hw==  data.0~833j6ZxqpIx92fQEoAsZhFtclqbc8L9s_MZVfQ1Pyrz-u_En1eiqdw26hghZj3TbK819yHjQE7dfzkga5ckbnw==  data.0~A3KHzuVks-xTGGwsp6V4b3TXojf2H5LjeRi6queqgoHLUjQjcoSAlUhXwXtpiGXth3jq3U9JynwdEtHzB2xMQw==  data.0~DO5sZbikU180sQSd1X3o-BsQSpXDL_jVDH__Yjvaw_djldyH8iTEyeFtJe9HoJb7El1mnDRnYZUUZSEmktbH5Q==  data.0~El-ZwoPZ-G29Mc7hrZnB3hUqIgSwBCps5Vqx0hYToE5jPAjMnPvd-Nx-DP5ITk-EPCC4lvVQ8vICOO7YWfbLIA==  data.0~KU5xFSPMwIbop-9vYM5tC7uszloSGfquTyDZ3N5ug1-oO1Jh_bbeT9N6OROVlEEAcUZ1DXS3_v89EtdgXK0CQQ==  (+18 more)
fixture/xcresult/174cd1de-31c6-43c4-ae04-fce7b5b54826.xcresult/: Info.plist
fixture/xcresult/2e75af03-2c35-45c2-bdee-9d2fe15aeec2.xcresult/: Info.plist
fixture/xcresult/cdadd5ff-38e2-4a3a-a3f0-969ce0971eb0.xcresult/: Info.plist
fixture/xcresult/d4cab44e-4004-4f55-98a0-e3f5530fcb81.xcresult/: Info.plist
src/: cas.rs  convert_interactor.rs  main.rs  test_result.rs  xcresult.rs  xcresulttool.rs  xctestrun.rs
(+90 files in other folders)
