[package]
name = "xcresult-json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
plist = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde-enum-str = "0.3.2"
serde_json = "1.0.91"
simple_logger = "4.0.0"
tempfile = "3.3.0"

[dev-dependencies]
rstest = "0.16.0"
